@@ -3,6 +3,9 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added config option server:autorejoin for rejoining on kick.
+    * Added event on_kick.
+    * Parse KICK.
     * Added event on_quit.
     * Parse QUIT.
     * Added event on_part.
